Initial rdbg scaffolding
What works:
* Ruby rdbg is launched (can see it running in htop)
* DAP client reports that it connects
* Can add to debug tasks

What doesn't work:
* Seems to be stuck on "Client 1 received event 'Output'
* Debug DAP logs (crashes Zed - might not be because of Ruby)
* UI for debugger to pick/launch does not work (might not be because of Ruby)

--- a/assets/settings/initial_debug_tasks.json
+++ b/assets/settings/initial_debug_tasks.json
@@ -28,5 +28,12 @@
     "initialize_args": {
       "console": "integratedTerminal"
     }
+  },
+  {
+    "label": "Debug active Ruby file",
+    "adapter": "ruby",
+    "program": "$ZED_FILE",
+    "request": "launch",
+    "cwd": "$ZED_WORKTREE_ROOT"
   }
 ]
